--- a/docs/release-notes/v1.26.X.md
+++ b/docs/release-notes/v1.26.X.md
@@ -10,6 +10,8 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.26.9+k3s1](v1.26.X.md#release-v1269k3s1) | Sep 20 2023| [v1.26.9](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v1269) | [v0.10.3](https://github.com/k3s-io/kine/releases/tag/v0.10.3) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.6-k3s1.26](https://github.com/k3s-io/containerd/releases/tag/v1.7.6-k3s1.26) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.9.10](https://github.com/traefik/traefik/releases/tag/v2.9.10) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
+| [v1.26.8+k3s1](v1.26.X.md#release-v1268k3s1) | Sep 05 2023| [v1.26.8](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v1268) | [v0.10.2](https://github.com/k3s-io/kine/releases/tag/v0.10.2) | [3.42.0](https://sqlite.org/releaselog/3_42_0.html) | [v3.5.9-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.9-k3s1) | [v1.7.3-k3s1](https://github.com/k3s-io/containerd/releases/tag/v1.7.3-k3s1) | [v1.1.8](https://github.com/opencontainers/runc/releases/tag/v1.1.8) | [v0.22.2](https://github.com/flannel-io/flannel/releases/tag/v0.22.2) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.9.10](https://github.com/traefik/traefik/releases/tag/v2.9.10) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.4) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.26.7+k3s1](v1.26.X.md#release-v1267k3s1) | Jul 27 2023| [v1.26.7](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v1267) | [v0.10.1](https://github.com/k3s-io/kine/releases/tag/v0.10.1) | [3.39.2](https://sqlite.org/releaselog/3_39_2.html) | [v3.5.7-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.7-k3s1) | [v1.7.1-k3s1](https://github.com/k3s-io/containerd/releases/tag/v1.7.1-k3s1) | [v1.1.7](https://github.com/opencontainers/runc/releases/tag/v1.1.7) | [v0.22.0](https://github.com/flannel-io/flannel/releases/tag/v0.22.0) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.9.10](https://github.com/traefik/traefik/releases/tag/v2.9.10) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.2](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.2) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.26.6+k3s1](v1.26.X.md#release-v1266k3s1) | Jun 26 2023| [v1.26.6](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v1266) | [v0.10.1](https://github.com/k3s-io/kine/releases/tag/v0.10.1) | [3.39.2](https://sqlite.org/releaselog/3_39_2.html) | [v3.5.7-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.7-k3s1) | [v1.7.1-k3s1](https://github.com/k3s-io/containerd/releases/tag/v1.7.1-k3s1) | [v1.1.7](https://github.com/opencontainers/runc/releases/tag/v1.1.7) | [v0.22.0](https://github.com/flannel-io/flannel/releases/tag/v0.22.0) | [v0.6.3](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.3) | [v2.9.10](https://github.com/traefik/traefik/releases/tag/v2.9.10) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.15.0](https://github.com/k3s-io/helm-controller/releases/tag/v0.15.0) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
 | [v1.26.5+k3s1](v1.26.X.md#release-v1265k3s1) | May 26 2023| [v1.26.5](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#v1265) | [v0.10.1](https://github.com/k3s-io/kine/releases/tag/v0.10.1) | [3.39.2](https://sqlite.org/releaselog/3_39_2.html) | [v3.5.7-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.7-k3s1) | [v1.7.1-k3s1](https://github.com/k3s-io/containerd/releases/tag/v1.7.1-k3s1) | [v1.1.7](https://github.com/opencontainers/runc/releases/tag/v1.1.7) | [v0.21.4](https://github.com/flannel-io/flannel/releases/tag/v0.21.4) | [v0.6.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.6.2) | [v2.9.10](https://github.com/traefik/traefik/releases/tag/v2.9.10) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.14.0](https://github.com/k3s-io/helm-controller/releases/tag/v0.14.0) | [v0.0.24](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.24)  |
@@ -22,6 +24,62 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release v1.26.9+k3s1
+<!-- v1.26.9+k3s1 -->
+
+This release updates Kubernetes to v1.26.9, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#changelog-since-v1268).
+
+### Changes since v1.26.8+k3s1:
+
+* Bump kine to v0.10.3 [(#8325)](https://github.com/k3s-io/k3s/pull/8325)
+* Update to v1.26.9 and go to v1.20.8 [(#8357)](https://github.com/k3s-io/k3s/pull/8357)
+  * Bump embedded containerd to v1.7.6
+  * Bump embedded stargz-snapshotter plugin to latest
+  * Fixed intermittent drone CI failures due to race conditions in test environment setup scripts
+  * Fixed CI failures due to changes to api discovery changes in Kubernetes 1.28
+
+-----
+## Release v1.26.8+k3s1
+<!-- v1.26.8+k3s1 -->
+This release updates Kubernetes to v1.26.8, and fixes a number of issues.
+
+:::caution IMPORTANT
+This release includes support for remediating CVE-2023-32187, a potential Denial of Service attack vector on K3s servers. See https://github.com/k3s-io/k3s/security/advisories/GHSA-m4hf-6vgr-75r2 for more information, including mandatory steps necessary to harden clusters against this vulnerability.
+:::
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.26.md#changelog-since-v1267).
+
+### Changes since v1.26.7+k3s1:
+
+* Update flannel and plugins [(#8075)](https://github.com/k3s-io/k3s/pull/8075)
+* Fix tailscale bug with ip modes [(#8097)](https://github.com/k3s-io/k3s/pull/8097)
+* Etcd snapshots retention when node name changes [(#8122)](https://github.com/k3s-io/k3s/pull/8122)
+* August Test Backports [(#8126)](https://github.com/k3s-io/k3s/pull/8126)
+* Backports for 2023-08 release [(#8129)](https://github.com/k3s-io/k3s/pull/8129)
+  * K3s's external apiserver listener now declines to add to its certificate any subject names not associated with the kubernetes apiserver service, server nodes, or values of the --tls-san option. This prevents the certificate's SAN list from being filled with unwanted entries.
+  * K3s no longer enables the apiserver's `enable-aggregator-routing` flag when the egress proxy is not being used to route connections to in-cluster endpoints.
+  * Updated the embedded containerd to v1.7.3+k3s1
+  * Updated the embedded runc to v1.1.8
+  * Updated the embedded etcd to v3.5.9+k3s1
+  * User-provided containerd config templates may now use `{{ template "base" . }}` to include the default K3s template content. This makes it easier to maintain user configuration if the only need is to add additional sections to the file.
+  * Bump docker/docker module version to fix issues with cri-dockerd caused by recent releases of golang rejecting invalid host headers sent by the docker client.
+  * Updated kine to v0.10.2
+* - K3s etcd-snapshot delete fail to delete local file when called with s3 flag [(#8144)](https://github.com/k3s-io/k3s/pull/8144)
+* - Fix for cluster-reset backup from s3 when etcd snapshots are disabled [(#8170)](https://github.com/k3s-io/k3s/pull/8170)
+* Fixed the etcd retention to delete orphaned snapshots based on the date [(#8189)](https://github.com/k3s-io/k3s/pull/8189)
+* Additional backports for 2023-08 release [(#8212)](https://github.com/k3s-io/k3s/pull/8212)
+  * The version of `helm` used by the bundled helm controller's job image has been updated to v3.12.3
+  * Bumped dynamiclistener to address an issue that could cause the apiserver/supervisor listener on 6443 to stop serving requests on etcd-only nodes.
+  * The K3s external apiserver/supervisor listener on 6443 now sends a complete certificate chain in the TLS handshake.
+* Move flannel to 0.22.2 [(#8222)](https://github.com/k3s-io/k3s/pull/8222)
+* Update to v1.26.8 [(#8235)](https://github.com/k3s-io/k3s/pull/8235)
+* Add new CLI flag to enable TLS SAN CN filtering [(#8258)](https://github.com/k3s-io/k3s/pull/8258)
+  * Added a new `--tls-san-security` option. This flag defaults to false, but can be set to true to disable automatically adding SANs to the server's TLS certificate to satisfy any hostname requested by a client.
+* Add RWMutex to address controller [(#8274)](https://github.com/k3s-io/k3s/pull/8274)
+
+-----
 ## Release v1.26.7+k3s1
 <!-- v1.26.7+k3s1 -->
 
